Temporarily attempt to fix alignment of search icon

--- a/src/components/NavDrawer/NavDrawer.module.scss
+++ b/src/components/NavDrawer/NavDrawer.module.scss
@@ -78,6 +78,7 @@
 		}
 
 		.icon {
+			background-color: blue;
 			color: white;
 			width: 30px;
 		}
